# zkpow

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DUPLICATE_COMPUTATION_AUDIT.md  DUPLICATE_LOGIC_REVIEW.md  Dockerfile  IMPLEMENTATION_PLAN.md  OPTIMIZATION_PLAN.md  POW_TOGGLE_PLAN.md  README.md  console.toml  docker-compose.yml  handoff-memory-leak-investigation.md  performance.md  pyproject.toml  retarget-implementation-plan.md  rust-toolchain  sp1-cluster.code-workspace
06/3e95a8aa9d/: metadata.json
06/3e95a8aa9d/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
13/1ffc4c99f9/: metadata.json
13/1ffc4c99f9/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
7b/73bd95bc5e/: metadata.json
7b/73bd95bc5e/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
9a/1cf6b81457/: metadata.json
9a/1cf6b81457/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
ca/6be3016328/: metadata.json
ca/6be3016328/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
contracts/: README.md  foundry.toml
contracts/src/: BitcoinHeaderRelay.sol
contracts/src/interfaces/: ISP1Verifier.sol
contracts/src/mocks/: MockSP1Verifier.sol
core/: Cargo.toml
core/src/: input.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: brand.rs  env.rs  input.rs  lib.rs  state.rs  types.rs
crates/core/src/env/: host.rs  mod.rs
crates/core/tests/: bitcoin_core_pow_compat.rs
crates/guest/: Cargo.toml
crates/guest/src/: main.rs  sha256.rs
crates/host/: Cargo.toml  build.rs
crates/host/src/: batch_runner.rs  config.rs  cuda_env.rs  lib.rs  main.rs  memory_monitor.rs  memory_profiler.rs  observability.rs  proof_pipeline.rs  proof_pipeline_diagnostics.rs  session_runner.rs  util.rs
crates/host/src/pipeline/: batch.rs  diagnostics.rs  execution.rs  input.rs  mod.rs
crates/host/src/pipeline/proof/: compressed.rs  groth16.rs  mod.rs
crates/host/src/util/: db.rs  hash.rs  simulate.rs
crates/host/tests/: bitcoin_core_pow_compat.rs
crates/memory-usage/: Cargo.toml
crates/memory-usage/src/: allocation.rs  lib.rs  process.rs  stages.rs
docs/: INFORMATION_FIRST_DIFF_PLAN.md  INFORMATION_FIRST_PLAN.md  cloud.md  cycle-tracking.md  cycle_tracking_research.md  implementation-work-log.md  infra-outline.md  public-boundary-implementation-plan.md  public-boundary-proposal.md  refactor_plan.md  sp1-deferred-artifact-leak.md  state-v2.md
docs/adal/: test_coverage_gap_analysis.md
docs/adr/: adr-0001-genesis-hash-as-network-id.md  adr-0002-environment-selected-state-and-host-only-median-time.md
docs/changelog/: TEMPLATE.md
docs/diagrams/: 01_genesis_trusted_anchor.d2  02_state_claim_continuation_binding.d2  03_guest_data_flow.md
docs/periphery/: btc-warp.md  ivc-contract.md  sp1-helios.md  sp1-tendermint.md  zkpow-trustless-swap-btc-eth..md
e5/2434b8787a/: metadata.json
e5/2434b8787a/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
e7/0fbc2df031/: metadata.json
e7/0fbc2df031/0/: content_hash.txt  full.jsonl  metadata.json
e7/0fbc2df031/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
e7/0fbc2df031/2/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
infra/: Dockerfile  Dockerfile.vast  README.md  cloud-gpu-report.md  docker-compose.yml  outline.md
infra/scripts/: docker-prover.sh  pull_outputs_loop.sh  vast_deploy.sh  vast_monitor.sh
infra/vast/: README_vast_experiment.md  entrypoint.sh
infra/vast/supervisor-scripts/: zkpow-prover.sh
infra/vast/supervisor/conf.d/: zkpow-prover.conf
leak/: Sample of continuous-prover-7.txt  mem-leak-prompt.md  memllg
program/: Cargo.toml
program/src/: main.rs  pow.rs  sha256.rs
script/: Cargo.toml  build.rs
script/src/: lib.rs  main.rs  observability.rs  proof_pipeline.rs  util.rs
scripts/: build-prover.sh  build_prover.sh  decolor  docker-prover.sh  env  print-env  profile-sp1.sh  prove  prove-batch.sh  prove-chain.sh  set-env  summarize-prove-spans.py
vast/supervisor-scripts/: zkpow-prover.sh
