[workspace]
members = [
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0" }
sp1-build = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-6.0.0" }
tokio = { version = "1.4", features = ["full"] }
hex = "0.4.3"
tracing = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
humantime = "2.1"
