[workspace]
members = [
    "crates/core",
    "crates/guest",
    "crates/host",
]
resolver = "2"

[workspace.dependencies]
dhat = "0.3.3"
zkpow-core = { path = "crates/core" }
zkpow-guest = { path = "crates/guest" }
zkpow-host = { path = "crates/host" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", tag = "v6.1.0", default-features = false, features = ["lib", "verify"] }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1", tag = "v6.1.0", features = ["profiling"] }
sp1-build = { git = "https://github.com/succinctlabs/sp1", tag = "v6.1.0" }
sp1-derive = { git = "https://github.com/succinctlabs/sp1", tag = "v6.1.0" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1", tag = "v6.1.0" }
sp1-recursion-gnark-ffi = { git = "https://github.com/succinctlabs/sp1", tag = "v6.1.0" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-6.0.0" }
tokio = { version = "1.52", features = ["full"] }
hex = "0.4.3"
tracing = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
humantime = "2.3"
num-bigint = "0.4.6"
memory-usage = { path = "../memory-usage" }

[profile.release]
debug = true          # Keeps debug symbols for your code
split-debuginfo = "off" # Ensures symbols stay in the binary

[profile.release.package."*"]
debug = true
