[package]
name = "bitcoin-header-chain-program"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bitcoin-header-chain-core = { workspace = true }
sp1-zkvm = { workspace = true, features = ["verify"] }

[features]
default = []
# Use a dummy PoW verifier (always returns true) for testing post-PoW validation
# without grinding real block headers. WARNING: this does NOT validate proof-of-work.
dummy-pow = []
