[package]
name = "bitcoin-header-chain-script"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-sdk = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
rusqlite = { workspace = true }
sha2 = "0.10.8"
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
