[package]
name = "bitcoin-header-chain-script"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bitcoin-header-chain-core = { workspace = true }
sp1-sdk = { workspace = true }
sp1-prover = { workspace = true }
sp1-recursion-gnark-ffi = { workspace = true, features = ["native"] }
#sp1-cuda = { version = "6.1.0", default-features = false, features = [] }
#sp1-prover-types = { version = "6.1.0", default-features = false, features = [] }
hex = { workspace = true }
humantime = { workspace = true }
num-bigint = { workspace = true }
rusqlite = { workspace = true }
sha2 = "0.10.9"
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
