[package]
name = "zkpow-guest"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "zkpow-guest"
path = "src/main.rs"

[dependencies]
zkpow-core = { workspace = true }
sp1-zkvm = { workspace = true, features = ["lib", "verify"] }
sp1-derive = { workspace = true }

[features]
default = []
profiling = ["zkpow-core/profiling"]
# Use a dummy PoW verifier (always returns true) for testing post-PoW validation
# without grinding real block headers. WARNING: this does NOT validate proof-of-work.
dummy-pow = []
