[package]
name = "zkpow-host"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "continuous-prover"
path = "src/bin/continuous_prover.rs"

[[bin]]
name = "zkpow-host"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
zkpow-core = { workspace = true, features = ["host"] }
console-subscriber = "0.4.1"
sp1-sdk = { workspace = true }
sp1-prover = { workspace = true }
sp1-recursion-gnark-ffi = { workspace = true, features = ["native"] }
hex = { workspace = true }
humantime = { workspace = true }
num-bigint = { workspace = true }
rusqlite = { workspace = true }
sha2 = "0.10.9"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
jemalloc = { workspace = true, optional = true }
jemalloc-ctl = { workspace = true, optional = true }
jemallocator = { workspace = true, optional = true }


[build-dependencies]
sp1-build = { workspace = true }

[features]
default = []
CUDA = ["sp1-sdk/cuda"]
memory-diagnostics = ["dep:jemalloc", "dep:jemalloc-ctl", "dep:jemallocator"]
# Opt in to the slow proof-generation tests.
slow-tests = []
