[package]
name = "zkpow-host"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "zkpow-host"
path = "src/main.rs"

[[bin]]
name = "sp1_stress"
path = "src/bin/sp1_stress.rs"

[lib]
path = "src/lib.rs"

[dependencies]
zkpow-core = { workspace = true, features = ["host"] }
console-subscriber = "0.4.1"
sp1-sdk = { workspace = true }
sp1-prover = { workspace = true }
sp1-recursion-gnark-ffi = { workspace = true, features = ["native"] }
memory-usage = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
num-bigint = { workspace = true }
rusqlite = { workspace = true }
sha2 = "0.10.9"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"


[build-dependencies]
sp1-build = { workspace = true }

[features]
default = []
CUDA = ["sp1-sdk/cuda"]
memory-diagnostics = []
# Opt in to the slow proof-generation tests.
slow-tests = []
